dist/1.0/bin/sample/retrieveUnpackaged/objects/Bundle_Component_Relation__c.object
<CustomObject>
    <fields>
        <fullName>Bundle__c</fullName>
        <description>Relation to Bundle</description>
        <inlineHelpText>Relation to Bundle</inlineHelpText>
        <label>Bundle</label>
        <referenceTo>CProduct__c</referenceTo>
        <relationshipLabel>Bundle Component Relations</relationshipLabel>
        <relationshipName>Bundle_Component_Relations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Component1__c</fullName>
        <description>Relation to Component - main component in relation</description>
        <inlineHelpText>Relation to Component - main component in relation</inlineHelpText>
        <label>Component1</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Bundle Component Relations</relationshipLabel>
        <relationshipName>Bundle_Component_Relations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component2__c</fullName>
        <description>Relation to Component</description>
        <inlineHelpText>Relation to Component</inlineHelpText>
        <label>Component2</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Bundle Component Relations (Component2)</relationshipLabel>
        <relationshipName>Bundle_Component_Relations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relation_Type__c</fullName>
        <description>Type of relation</description>
        <inlineHelpText>Type of relation</inlineHelpText>
        <label>Relation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Exclusion</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Technical field used for migration between environments.</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field used for migration between environments.</inlineHelpText>
        <label>Source Record Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Bundle Component Relation</label>
    <nameField>
        <displayFormat>BCR{000000000}</displayFormat>
        <label>Bundle Component Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Component Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>